# Teabag

./: .gitignore  CMakeLists.txt  README.md  license.md  singleton.h  teabag.sln  teabag.vcxproj  teabag.vcxproj.filters
cmake/patches/: BulletCMakeLists.patch  OgreDepsCMakeLists.patch  SDL2CMakeLists.patch
cmake/utils/: FindPkgMacros.cmake  VisualStudioPWD.cmake
media/: box.material  dejavu.gorilla  sky.material
src/: CMakeLists.txt  common.h  main.cpp  main.h  pch.h
src/engine/: engine.cpp  engine.h
src/engine/component/: component.cpp  component.h  componentManager.h
src/engine/component/abstract/: playerComponent.h  spectatorComponent.h
src/engine/component/base/: component.cpp  component.h
src/engine/component/entity/: entity.cpp  entity.h  entityManager.h
src/engine/component/network/: networkComponent.h  networkManager.cpp  networkManager.h
src/engine/component/physics/: motionComponent.h  physicsComponent.h  physicsManager.cpp  physicsManager.h  transformComponent.h
src/engine/component/player/: playerComponent.h  playerManager.cpp  playerManager.h
src/engine/component/render/: cameraComponent.h  cameraManager.cpp  cameraManager.h  renderComponent.h  renderManager.cpp  renderManager.h
src/engine/component/spectator/: spectatorComponent.h  spectatorManager.cpp  spectatorManager.h
src/engine/core/: componentManager.h  entitySystem.cpp  entitySystem.h  eventSystem.cpp  eventSystem.h  inputSystem.cpp  inputSystem.h  networkSystem.cpp  networkSystem.h  physicsSystem.cpp  physicsSystem.h  renderSystem.cpp  renderSystem.h
src/engine/core/component/: component.cpp  component.h  componentManager.h  entity.cpp  entity.h  physicsComponent.cpp  physicsComponent.h  renderComponent.cpp  renderComponent.h
src/engine/core/component/base/: component.cpp  component.h  entity.cpp  entity.h  positionComponent.cpp  positionComponent.h
src/engine/core/component/control/: spectatorControlComponent.cpp  spectatorControlComponent.h
src/engine/core/component/network/: clientComponent.h  networkComponent.cpp  networkComponent.h
src/engine/core/component/physics/: physicsComponent.cpp  physicsComponent.h  positionComponent.cpp  positionComponent.h
src/engine/core/component/render/: cameraComponent.cpp  cameraComponent.h  renderComponent.cpp  renderComponent.h
src/engine/core/entity/: entity.cpp  entity.h
src/engine/core/entity-component/: componentManager.h  entity.h  entityManager.cpp  entityManager.h
src/engine/core/event/: EventListener.cpp  EventListener.h  event.cpp  event.h  eventListener.cpp  eventListener.h  eventSystem.cpp  eventSystem.h
src/engine/core/event/events/: actionEvent.h  keyboardEvent.cpp  keyboardEvent.h  messageEvent.h  motionEvent.h  mouseEvent.cpp  mouseEvent.h  newSnapshotEvent.h  playerEvent.h  spawnEvent.h  transformEvent.cpp  transformEvent.h  transfromEvent.h
src/engine/core/graphics/: OSXUtils.mm  RenderSystem.cpp  RenderSystem.h  camera.cpp  camera.h  cameraManager.cpp  cameraManager.h  renderSystem.cpp  renderSystem.h
src/engine/core/graphics/UI/: OgreConsoleForGorilla.cpp  OgreConsoleForGorilla.h  ogreConsole.cpp  ogreConsole.h
src/engine/core/input/: OIStoEventSystem.cpp  OIStoEventSystem.h  inputSystem.cpp  inputSystem.h
src/engine/core/network/: snapshot.h  snapshotManager.cpp  snapshotManager.h
src/engine/core/networking/: clientNetworkSystem.cpp  clientNetworkSystem.h  networkSystem.cpp  networkSystem.h  serverNetworkSystem.cpp  serverNetworkSystem.h
src/engine/core/physics/: physicsManager.cpp  physicsManager.h  physicsSystem.cpp  physicsSystem.h
src/engine/core/render/: OSXUtils.h  renderSystem.cpp  renderSystem.h
src/engine/core/render/UI/: Gorilla.cpp  Gorilla.h  ogreConsole.cpp  ogreConsole.h
src/engine/core/typedef/: id.h
src/engine/core/user-interface/: debugDisplaySystem.cpp  debugDisplaySystem.h  ogreConsole.cpp  ogreConsole.h
src/engine/factory/: entityPrototype.cpp  entityPrototype.h
src/engine/manager/: manager.h  script.h
src/engine/manager/abstract/: playerManager.cpp  playerManager.h  spectatorManager.cpp  spectatorManager.h
src/engine/manager/game/: actionMapping.h  frame.h
src/engine/manager/input/: action.h  inputToActionManager.h
src/engine/manager/network/: clientNetworkSystem.cpp  clientNetworkSystem.h  networkComponentManager.cpp  networkComponentManager.h  networkSystem.cpp  networkSystem.h  serverNetworkSystem.cpp  serverNetworkSystem.h  snapshot.cpp  snapshot.h  snapshotManager.cpp  snapshotManager.h
src/engine/manager/physics/: physicsManager.cpp  physicsManager.h
src/engine/manager/render/: cameraManager.cpp  cameraManager.h  renderManager.cpp  renderManager.h  renderSystem.cpp  renderSystem.h
src/engine/manager/script/: script.cpp  script.h  scriptManager.h
src/engine/terrain/: sector.cpp  sector.h  terrain.cpp  terrain.h
src/engine/world/: entityManager.cpp  entityManager.h  staticGeometry.cpp  staticGeometry.h
src/engine_old/: engine.cpp
src/engine_old/component/abstract/: spectatorComponent.h
src/engine_old/component/network/: networkComponent.h
src/engine_old/component/physics/: physicsComponent.h
src/engine_old/core/entity-component/: entityManager.h
src/game/: SpectatorFactory.cpp  SpectatorFactory.h  boxFactory.cpp  boxFactory.h  gameModeFree.cpp  gameModeFree.h
